fixed spacing

--- a/app/assets/stylesheets/components/_emoji.scss
+++ b/app/assets/stylesheets/components/_emoji.scss
@@ -1,7 +1,7 @@
 .emoji {
-  margin: 0px 10px;
+  margin: 0px 5px;
   font-size: 30px;
-  padding: 10px;
+  padding: 4px 8px;
   border: 1px solid gray;
   border-radius: 5px;
   &:hover{
